2018-01-11  Richard Biener  <rguenther@suse.de>

PR tree-optimization/83435
	* graphite.c (canonicalize_loop_form): Ignore fake loop exit edges.
	* graphite-scop-detection.c (scop_detection::get_sese): Likewise.
	* tree-vrp.c (add_assert_info): Drop TREE_OVERFLOW if they appear.

	* gcc.dg/graphite/pr83435.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@256535 138bc75d-0d04-0410-961f-82ee72b054a4